crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_model__v_model_text_input.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<input v-model=\"msg\">\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><input${_ssrRenderAttr("value", _ctx.msg)}></div>`)
}
