crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_model__v_model_textarea.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<textarea v-model=\"msg\"></textarea>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><textarea></textarea></div>`)
}
